--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@babel/core": "^7.20.12",
     "@babel/helper-validator-identifier": "^7.19.1",
     "@babel/highlight": "^7.18.6",
+    "@swc-node/core": "^1.9.2",
+    "@swc-node/register": "^1.5.5",
     "@types/node": "^18.11.18",
     "chalk": "^5.2.0",
     "es6-error": "^4.1.1",
+    "normalize-path": "^3.0.0",
     "text-table": "^0.2.0",
     "typescript": "^4.9.4"
   }
